Still fixing light and dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -2,31 +2,35 @@
 
 html,
 body {
-  height: 100%; /* Ensure the body takes the full height of the viewport */
-  margin: 0; /* Remove default margin */
+  height: 100%;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transition: background-color 0.5s, color 0.5s;
 }
 
 body.light-mode {
-  background-color: white; /* Light mode background */
-  color: black; /* Light mode text color */
-  transition: 1s ease;
+  background-color: white !important;
+  color: black !important;
 }
 
 body.dark-mode {
-  background-color: #121212; /* Dark mode background */
-  color: white; /* Dark mode text color */
-  transition: 1s ease;
+  background-color: #121212 !important;
+  color: white !important;
+}
+
+.modal-content {
+  background-color: white !important;
+  color: black !important;
 }
 
 #root {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Full height for the root element */
+  min-height: 100vh;
 }
 
 code {
